{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 302,
  "lineage": "253edc55-c5cd-0b9d-db94-0ec78ced7d9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b0e73eb54b018b3",
            "arn": "arn:aws:ec2:eu-central-1:834076182408:elastic-ip/eipalloc-04b0e73eb54b018b3",
            "association_id": "eipassoc-0e647d9290c4c1893",
            "domain": "vpc",
            "id": "eipalloc-04b0e73eb54b018b3",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-098247784eb556c3e",
            "private_dns": "ip-10-0-1-144.eu-central-1.compute.internal",
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-52-29-229-104.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.229.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-nat-eip-1",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-nat-eip-1",
              "Project": "madeinworld"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b359b6ed67435420",
            "arn": "arn:aws:ec2:eu-central-1:834076182408:elastic-ip/eipalloc-0b359b6ed67435420",
            "association_id": "eipassoc-0d198255323856b35",
            "domain": "vpc",
            "id": "eipalloc-0b359b6ed67435420",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-031e7b6c895991b35",
            "private_dns": "ip-10-0-2-59.eu-central-1.compute.internal",
            "private_ip": "10.0.2.59",
            "public_dns": "ec2-3-79-133-247.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.79.133.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-nat-eip-2",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-nat-eip-2",
              "Project": "madeinworld"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:internet-gateway/igw-03f3d6f79b6b2514a",
            "id": "igw-03f3d6f79b6b2514a",
            "owner_id": "834076182408",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-igw",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-igw",
              "Project": "madeinworld"
            },
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b0e73eb54b018b3",
            "association_id": "eipassoc-0e647d9290c4c1893",
            "connectivity_type": "public",
            "id": "nat-0538b86977a9085f2",
            "network_interface_id": "eni-098247784eb556c3e",
            "private_ip": "10.0.1.144",
            "public_ip": "52.29.229.104",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e61f4628779e03a9",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-nat-gw-1",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-nat-gw-1",
              "Project": "madeinworld"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b359b6ed67435420",
            "association_id": "eipassoc-0d198255323856b35",
            "connectivity_type": "public",
            "id": "nat-061dc0579587fe671",
            "network_interface_id": "eni-031e7b6c895991b35",
            "private_ip": "10.0.2.59",
            "public_ip": "3.79.133.247",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-018d7ed145bbd1452",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-nat-gw-2",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-nat-gw-2",
              "Project": "madeinworld"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:route-table/rtb-0b98633c4b3fbc77a",
            "id": "rtb-0b98633c4b3fbc77a",
            "owner_id": "834076182408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0538b86977a9085f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-private-rt-1",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-private-rt-1",
              "Project": "madeinworld"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:route-table/rtb-0341d87f4e0c5cddc",
            "id": "rtb-0341d87f4e0c5cddc",
            "owner_id": "834076182408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061dc0579587fe671",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-private-rt-2",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-private-rt-2",
              "Project": "madeinworld"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:route-table/rtb-052fd3715c7f9e2c4",
            "id": "rtb-052fd3715c7f9e2c4",
            "owner_id": "834076182408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f3d6f79b6b2514a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-public-rt",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-public-rt",
              "Project": "madeinworld"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871e0e63fee3b282",
            "route_table_id": "rtb-0b98633c4b3fbc77a",
            "subnet_id": "subnet-090a31fc429976f65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c48cb1cacaa8f07",
            "route_table_id": "rtb-0341d87f4e0c5cddc",
            "subnet_id": "subnet-03fa44b711a9e4cc1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09226700ba213eb6c",
            "route_table_id": "rtb-052fd3715c7f9e2c4",
            "subnet_id": "subnet-0e61f4628779e03a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0131fe05e6f03a6bb",
            "route_table_id": "rtb-052fd3715c7f9e2c4",
            "subnet_id": "subnet-018d7ed145bbd1452"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:security-group/sg-0744db0dad59915d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0744db0dad59915d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fee77d8fe50f2ccb"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "madeinworld-dev-eks-cluster-20250623173510520800000005",
            "name_prefix": "madeinworld-dev-eks-cluster-",
            "owner_id": "834076182408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-eks-cluster-sg",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-eks-cluster-sg",
              "Project": "madeinworld"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:security-group/sg-0fee77d8fe50f2ccb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fee77d8fe50f2ccb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0744db0dad59915d3"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "madeinworld-dev-eks-nodes-20250623173521233400000007",
            "name_prefix": "madeinworld-dev-eks-nodes-",
            "owner_id": "834076182408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-eks-nodes-sg",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-eks-nodes-sg",
              "Project": "madeinworld"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:security-group/sg-00db9116a81f583ea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00db9116a81f583ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fee77d8fe50f2ccb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "madeinworld-dev-rds-2025062317352892510000000a",
            "name_prefix": "madeinworld-dev-rds-",
            "owner_id": "834076182408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-rds-sg",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-rds-sg",
              "Project": "madeinworld"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_ingress_node_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-4203465495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0744db0dad59915d3",
            "security_group_rule_id": "sgr-0c331d94304196fec",
            "self": false,
            "source_security_group_id": "sg-0fee77d8fe50f2ccb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:subnet/subnet-090a31fc429976f65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a31fc429976f65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834076182408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-private-subnet-1",
              "Project": "madeinworld",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-private-subnet-1",
              "Project": "madeinworld",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:subnet/subnet-03fa44b711a9e4cc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fa44b711a9e4cc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834076182408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-private-subnet-2",
              "Project": "madeinworld",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-private-subnet-2",
              "Project": "madeinworld",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:subnet/subnet-0e61f4628779e03a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e61f4628779e03a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "834076182408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-public-subnet-1",
              "Project": "madeinworld",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-public-subnet-1",
              "Project": "madeinworld",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:subnet/subnet-018d7ed145bbd1452",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018d7ed145bbd1452",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "834076182408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-public-subnet-2",
              "Project": "madeinworld",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-public-subnet-2",
              "Project": "madeinworld",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d13e5a52e896d2eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834076182408:vpc/vpc-0d13e5a52e896d2eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7b1dcfbf615106d",
            "default_route_table_id": "rtb-0b867bc69920e9a55",
            "default_security_group_id": "sg-03551f0c857b93d14",
            "dhcp_options_id": "dopt-077636f2a0263ae4f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d13e5a52e896d2eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b867bc69920e9a55",
            "owner_id": "834076182408",
            "tags": {
              "Environment": "dev",
              "Name": "madeinworld-dev-vpc",
              "Project": "madeinworld"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "madeinworld-dev-vpc",
              "Project": "madeinworld"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}